--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,1 +1,12 @@
-{# This template is for the root of the site #}
+<!doctype html>
+<html lang="en">
+<head>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/styles.css" rel="stylesheet">
+</head>
+<body>
+<h1>Hello World</h1>
+</body>
+</html>
